# led-ticker-crypto

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.toml
docs/superpowers/plans/: 2026-06-11-coingecko-phase3-review.md
src/led_ticker_crypto/: __init__.py  _colors.py  _ticker_render.py  coingecko.py
tests/: conftest.py  test_autolookup.py  test_coingecko.py  test_format_price.py  test_import_purity.py  test_smoke.py
tools/: compare_render.py
