[project]
name = "led-ticker-crypto"
version = "0.1.0"
description = "Crypto-price widgets for led-ticker (CoinGecko)."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "James Awesome", email = "james@morelli.nyc" }]
dependencies = ["led-ticker", "aiohttp"]

# Entry-point NAME ("crypto") is the plugin namespace -> TOML `type = "crypto.coingecko"`.
[project.entry-points."led_ticker.plugins"]
crypto = "led_ticker_crypto:register"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker_crypto"]

[tool.uv.sources]
led-ticker = { path = "../led-ticker", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["../led-ticker/tests/stubs"]

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.14"
extraPaths = ["../led-ticker/tests/stubs"]

[tool.coverage.report]
fail_under = 90
